--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Arial Rounded MT Bold",sans-serif;
 }
 
 canvas {
