--- a/style.css
+++ b/style.css
@@ -6,32 +6,29 @@ body {
   position: relative;
   background: slateblue;
   color: white;
-  font-family: "Cookie Supply DEMO", sans-serif;
-  font-size: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
+  font-family: "Arial Rounded MT Bold",sans-serif;
+  font-size: 22px;
 }
 
 h1, p{
   margin: 0;
 }
 
-h1 {
-  margin-bottom: 60px;
-}
-
-
 .btn {
   cursor: pointer;
   padding: 15px;
   border: none;
+  border-radius: 10px;
   color: white;
   font-family: "Cookie Supply DEMO", sans-serif;
   font-size: 30px;
+  background: indigo;
 }
 
 .btn:focus {
@@ -42,24 +39,19 @@ h1 {
   background: #300053;
 }
 
-.rules-btn {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  border-radius: 0 0 10px 10px;
-  transform: translateX(-62px) rotate(-90deg);
-  transition: transform 1s ease-in-out;
-  background: indigo;
+.title {
+  font-family: "Cookie Supply DEMO", sans-serif;
+  font-size: 45px;
 }
 
-.rules-btn.show {
-  transform: translateX(338px) rotate(-90deg);
+.title--main {
+  font-size: 65px;
 }
 
 .rules {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 100%;
   background: indigo;
   width: 400px;
   min-height: 100vh;
@@ -68,12 +60,22 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transform: translateX(-100%);
   transition: transform 1s ease-in-out;
+  z-index: 10;
+}
+
+.rules-btn {
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  border-radius: 0 0 10px 10px;
+  transform: translateX(-62px) rotate(-90deg);
+  z-index: 10;
+  white-space: nowrap;
 }
 
 .rules.show {
-  transform: translateX(0);
+  transform: translateX(100%);
 }
 
 .rules-title {
@@ -82,11 +84,14 @@ h1 {
 
 .rules-text {
   padding-top: 15px;
-  font-family: "Arial Rounded MT Bold",sans-serif;
-  font-size: 22px;
 }
 
 .score {
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0 auto;
   width: 150px;
   height: 60px;
   background: indigo;
@@ -96,9 +101,53 @@ h1 {
   align-items: center;
   justify-content: center;
   font-family: "Arial Rounded MT Bold",sans-serif;
+  z-index: -1;
+  transition: all 0.4s;
 }
 
-canvas {
+.board {
+  position: relative;
+  padding: 60px 0 0;
+  margin: 60px 0 0;
+  z-index: 0;
+}
+
+.board[data-stage='prepare'] .prepare {
+  display: block;
+}
+
+.board[data-stage='active'] .score {
+  top: 0;
+}
+
+.board[data-stage='win'] .win {
+  display: block;
+}
+
+.board[data-stage='lose'] .lose {
+  display: block;
+}
+
+.canvas {
   background: white;
   border-radius: 10px;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: calc(50% + 30px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.modal.lose, .modal.win {
+  padding: 40px;
+  border-radius: 10px;
+  background-color: slateblue;
+}
+
+.final-score{
+  margin-bottom: 15px;
 }
